Added multi-tenant support